Hyperland now has screen locking

--- a/nixos/home-config/hypr/hyprland.conf
+++ b/nixos/home-config/hypr/hyprland.conf
@@ -91,6 +91,7 @@ gestures {
 
 misc {
     force_default_wallpaper = 0 # Set to 0 to disable the anime mascot wallpapers
+    key_press_enables_dpms = true
 }
 
 # Example per-device config
@@ -126,6 +127,8 @@ bind = $mainMod, D, exec, wofi --show drun
 bind = $mainMod, I, exec, chromium
 bind = $mainMod, M, exec, cider
 bind = $mainMod, N, exec, joplin-desktop
+
+bind = $mainMod SHIFT, L, exec, swaylock -f -e -c 1d2021 --inside-color 000000b3 -s fill -i ~/.cache/lockscreen; sleep 1; hyprctl dispatch dpms off
 
 # Audio binds
 bind = , XF86AudioRaiseVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ +10% 
