--- a/nixos/home-config/hypr/hyprland.conf
+++ b/nixos/home-config/hypr/hyprland.conf
@@ -13,13 +13,14 @@ exec-once = waybar & hyprpaper
 
 # Some default env vars.
 env = XCURSOR_SIZE,24
+env = WLR_RENDERER,vulkan
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
-    kb_layout = us
-    kb_variant =
+    kb_layout = us,ca
+    kb_variant = ,multix
     kb_model =
-    kb_options =
+    kb_options = grp:alt_shift_toggle,caps:none
     kb_rules =
 
     follow_mouse = 1
@@ -105,10 +106,10 @@ device:epic-mouse-v1 {
 # Example windowrule v2
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
-windowrulev2 = workspace 2,class:^(Code)$
-windowrulev2 = workspace 3,class:^(Joplin)$
-windowrulev2 = workspace 5,class:^(Cider)$
-windowrulev2 = workspace 4,class:^(virt-manager)$
+windowrulev2 = workspace 2,class:^(Joplin)$
+windowrulev2 = workspace 3,class:^(code-url-handler)$
+windowrulev2 = workspace 4,class:^(Cider)$
+windowrulev2 = workspace 5,class:^(virt-manager)$
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
@@ -119,21 +120,21 @@ $mainMod = SUPER
 
 bind = $mainMod SHIFT, E, exit, 
 bind = $mainMod SHIFT, Q, killactive, 
-bind = $mainMod SHIFT, C, exec, code 
-bind = $mainMod SHIFT, V, exec, virt-manager
 
 bind = $mainMod, RETURN, exec, kitty
+bind = $mainMod, C, exec, code 
 bind = $mainMod, D, exec, wofi --show drun
 bind = $mainMod, I, exec, chromium
+bind = $mainMod, K, exec, virt-manager
 bind = $mainMod, M, exec, cider
-bind = $mainMod, N, exec, joplin-desktop
+bind = $mainMod, N, exec, appimage-run ~/appimages/joplin-desktop
 
 bind = $mainMod SHIFT, L, exec, swaylock -f -e -c 1d2021 --inside-color 000000b3 -s fill -i ~/.cache/lockscreen; sleep 1; hyprctl dispatch dpms off
 
 # Audio binds
-bind = , XF86AudioRaiseVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ +10% 
-bind = , XF86AudioLowerVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ -10%
-bind = , XF86AudioMute, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle
+bind = , XF86AudioRaiseVolume, exec, wpctl set-volume 51 10%+  # 51 is the built in sink
+bind = , XF86AudioLowerVolume, exec, wpctl set-volume 51 10%-
+bind = , XF86AudioMute, exec, wpctl set-mute 51 toggle
 #bind = , XF86AudioMicMute, exec, pamixer --default-source -m
 #bind = , XF86AudioPlay, exec, playerctl play-pause
 #bind = , XF86AudioPause, exec, playerctl play-pause
