Laptop and nVidia systems checks

--- a/nixos/home-config/hypr/hyprland.conf
+++ b/nixos/home-config/hypr/hyprland.conf
@@ -126,8 +126,10 @@ bind = $mainMod, C, exec, code
 bind = $mainMod, D, exec, wofi --show drun
 bind = $mainMod, I, exec, chromium
 bind = $mainMod, K, exec, virt-manager
-bind = $mainMod, M, exec, cider
-bind = $mainMod, N, exec, appimage-run ~/appimages/joplin-desktop
+
+# The following may need --disable-gpu on nVidia systems
+bind = $mainMod, M, exec, cider  #--disable-gpu
+bind = $mainMod, N, exec, joplin-desktop  #--disable-gpu
 
 bind = $mainMod SHIFT, L, exec, swaylock -f -e -c 1d2021 --inside-color 000000b3 -s fill -i ~/.cache/lockscreen; sleep 1; hyprctl dispatch dpms off
 
