feature: added vol and backlight controls

--- a/nixos/home-config/hypr/hyprland.conf
+++ b/nixos/home-config/hypr/hyprland.conf
@@ -17,8 +17,8 @@ env = WLR_RENDERER,vulkan
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
-    kb_layout = us,ca
-    kb_variant = ,multix
+    kb_layout = us,ca,us
+    kb_variant = ,multix,intl
     kb_model =
     kb_options = grp:alt_shift_toggle,caps:none
     kb_rules =
@@ -106,7 +106,7 @@ device:epic-mouse-v1 {
 # Example windowrule v2
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
-windowrulev2 = workspace 2,class:^(Joplin)$
+windowrulev2 = workspace 2,class:^(@joplin/app-desktop)$
 windowrulev2 = workspace 3,class:^(code-url-handler)$
 windowrulev2 = workspace 4,class:^(Cider)$
 windowrulev2 = workspace 5,class:^(virt-manager)$
@@ -126,17 +126,21 @@ bind = $mainMod, C, exec, code
 bind = $mainMod, D, exec, wofi --show drun
 bind = $mainMod, I, exec, chromium
 bind = $mainMod, K, exec, virt-manager
-
-# The following may need --disable-gpu on nVidia systems
-bind = $mainMod, M, exec, cider  #--disable-gpu
-bind = $mainMod, N, exec, joplin-desktop  #--disable-gpu
+bind = $mainMod, M, exec, cider
+bind = $mainMod, N, exec, joplin-desktop
 
 bind = $mainMod SHIFT, L, exec, swaylock -f -e -c 1d2021 --inside-color 000000b3 -s fill -i ~/.cache/lockscreen; sleep 1; hyprctl dispatch dpms off
 
+# Backscreen light binding
+bind = , XF86MonBrightnessUp, exec, brightnessctl set +10%
+bind = , XF86MonBrightnessDown, exec, brightnessctl set 10%-
+
 # Audio binds
-bind = , XF86AudioRaiseVolume, exec, wpctl set-volume 51 10%+  # 51 is the built in sink
-bind = , XF86AudioLowerVolume, exec, wpctl set-volume 51 10%-
-bind = , XF86AudioMute, exec, wpctl set-mute 51 toggle
+# The sink number 51 works for sisyphus, but it is 58 on glaucus
+# Ensure you change the sink number accordingly
+bind = , XF86AudioRaiseVolume, exec, wpctl set-volume 58 10%+
+bind = , XF86AudioLowerVolume, exec, wpctl set-volume 58 10%-
+bind = , XF86AudioMute, exec, wpctl set-mute 58 toggle
 #bind = , XF86AudioMicMute, exec, pamixer --default-source -m
 #bind = , XF86AudioPlay, exec, playerctl play-pause
 #bind = , XF86AudioPause, exec, playerctl play-pause
@@ -146,7 +150,6 @@ bind = , XF86AudioMute, exec, wpctl set-mute 51 toggle
 # Standard binds
 
 bind = $mainMod, V, togglefloating, 
-#bind = $mainMod, R, exec, wofi --show drun
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 
