Replacing Chrome with FF

--- a/nixos/users/gmc/hypr/hyprland.conf
+++ b/nixos/users/gmc/hypr/hyprland.conf
@@ -118,7 +118,7 @@ bind = $mainMod SHIFT, Q, killactive,
 bind = $mainMod, RETURN, exec, kitty
 bind = $mainMod, C, exec, code 
 bind = $mainMod, D, exec, wofi --show drun
-bind = $mainMod, I, exec, chromium
+bind = $mainMod, I, exec, firefox
 bind = $mainMod, K, exec, virt-manager
 bind = $mainMod, M, exec, cider
 bind = $mainMod, N, exec, joplin-desktop
