--- a/nixos/users/gmc/hypr/hyprland.conf
+++ b/nixos/users/gmc/hypr/hyprland.conf
@@ -130,12 +130,12 @@ bind = , XF86MonBrightnessUp, exec, brightnessctl set +10%
 bind = , XF86MonBrightnessDown, exec, brightnessctl set 10%-
 
 # Audio binds
-# The sink number 51 works for sisyphus, but it is 58 on glaucus
-# Ensure you change the sink number accordingly
-bind = , XF86AudioRaiseVolume, exec, wpctl set-volume 58 10%+
-bind = , XF86AudioLowerVolume, exec, wpctl set-volume 58 10%-
-bind = , XF86AudioMute, exec, wpctl set-mute 58 toggle
-#bind = , XF86AudioMicMute, exec, pamixer --default-source -m
+# WPCtl is "Wireplumber," the control for PipeWire. It is equivalent to
+# PulseAudio's pactl.
+bind = , XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
+bind = , XF86AudioLowerVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%-
+bind = , XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
+bind = , XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
 #bind = , XF86AudioPlay, exec, playerctl play-pause
 #bind = , XF86AudioPause, exec, playerctl play-pause
 #bind = , XF86AudioNext, exec, playerctl next
