--- a/nixos/users/gmc/hypr/hyprland.conf
+++ b/nixos/users/gmc/hypr/hyprland.conf
@@ -116,9 +116,10 @@ bind = $mainMod SHIFT, E, exit,
 bind = $mainMod SHIFT, Q, killactive, 
 
 bind = $mainMod, RETURN, exec, kitty
-bind = $mainMod, C, exec, code 
+bind = $mainMod, A, exec, anki
 bind = $mainMod, D, exec, wofi --show drun
 bind = $mainMod, I, exec, firefox
+bind = $mainMod, J, exec, qjackctl
 bind = $mainMod, K, exec, virt-manager
 bind = $mainMod, M, exec, cider
 bind = $mainMod, N, exec, joplin-desktop
