--- a/nixos/users/gmc/hypr/hyprland.conf
+++ b/nixos/users/gmc/hypr/hyprland.conf
@@ -13,7 +13,7 @@ exec-once = waybar & hyprpaper
 
 # Some default env vars.
 env = XCURSOR_SIZE,24
-env = WLR_RENDERER,vulkan
+# env = WLR_RENDERER,vulkan
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
