Source branch is head_ref. Target is base_ref

--- a/.github/workflows/pr_to_main.yml
+++ b/.github/workflows/pr_to_main.yml
@@ -11,4 +11,4 @@ jobs:
       - run: >
           echo "Checking if main accepts PRs from branch
           ${{ github.ref_name }}"
-      - run: \[ "develop" = "${{ github.base_ref }}" \] 
+      - run: \[ "develop" = "${{ github.head_ref }}" \] 
