Source branch is head_ref. Target is base_ref

--- a/.github/workflows/pr_to_main.yml
+++ b/.github/workflows/pr_to_main.yml
@@ -9,6 +9,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: >
-          echo "Checking if branch $${{ github.base_ref }} accepts PRs from
+          echo "Checking if branch ${{ github.base_ref }} accepts PRs from
           branch ${{ github.head_ref}}"
       - run: \[ "develop" = "${{ github.head_ref }}" \] 
