--- a/services/05_netbox/local_values.yaml
+++ b/services/05_netbox/local_values.yaml
@@ -10,6 +10,9 @@ externalDatabase:
   port: 5432
   database: netbox
   existingSecretName: postgres-admin-credentials
+service:
+  type: LoadBalancer
+  loadBalancerIP: 192.168.68.18
 superuser.existingSecret: netbox-superuser-credentials
 tasksRedis:
   host: redis-service
