--- a/services/05_netbox/local_values.yaml
+++ b/services/05_netbox/local_values.yaml
@@ -1,19 +1,20 @@
 ---
-postgresql.enabled: false
-redis.enabled: false
-
 cachingRedis:
-  host: redis-service
-  existingSecretName: redis-admin-credentials
+  host: redis
+  existingSecretName: netbox-redis-credentials
 externalDatabase:
-  host: postgres-service
+  host: postgres
   port: 5432
   database: netbox
-  existingSecretName: postgres-admin-credentials
+  existingSecretName: netbox-db-credentials
+postgresql:
+  enabled: false
+redis:
+  enabled: false
 service:
   type: LoadBalancer
   loadBalancerIP: 192.168.68.18
 superuser.existingSecret: netbox-superuser-credentials
 tasksRedis:
-  host: redis-service
-  existingSecretName: redis-admin-credentials
+  host: redis
+  existingSecretName: netbox-redis-credentials
