--- a/services/03_redis/service.yaml
+++ b/services/03_redis/service.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: redis-service
+  name: redis
   namespace: cummings-online-local
 spec:
   selector:
