--- a/services/04_lb/l2advertisement.yaml
+++ b/services/04_lb/l2advertisement.yaml
@@ -1,9 +1,6 @@
 ---
 apiVersion: metallb.io/v1beta1
-kind: IPAddressPool
+kind: L2Advertisement
 metadata:
   name: cummings-online-local
   namespace: metallb-system
-spec:
-  addresses:
-  - 192.168.68.19/24
