--- a/services/04_lb/local_nginx_values.yaml
+++ b/services/04_lb/local_nginx_values.yaml
@@ -1,3 +1,6 @@
 ---
-service:
-  loadBalancerIP: 192.168.68.19
+controller:
+  ingressClassResource:
+    default: true
+  service:
+    loadBalancerIP: 192.168.68.19
