Netbox works with https and cert-manager, and now with superuser

--- a/services/05_netbox/local_values.yaml
+++ b/services/05_netbox/local_values.yaml
@@ -11,7 +11,8 @@ postgresql:
   enabled: false
 redis:
   enabled: false
-superuser.existingSecret: netbox-superuser-credentials
+superuser:
+  existingSecret: netbox-superuser-credentials
 tasksRedis:
   host: redis
   existingSecretName: netbox-redis-credentials
