--- a/services/04_lb/ingress.yaml
+++ b/services/04_lb/ingress.yaml
@@ -4,7 +4,7 @@ kind: Ingress
 metadata:
   annotations: 
     cert-manager.io/cluster-issuer: cummings-online-local-issuer
-  name: netbox
+  name: cummings-online-ingress
   namespace: cummings-online-local
 spec:
   rules:
