--- a/playbooks/roles/common/tasks/main.yml
+++ b/playbooks/roles/common/tasks/main.yml
@@ -1,7 +1,59 @@
 ---
-- name: Create a handy zshrc skeleton 
+- name: Create a handy zshrc skeleton
   become: true
   ansible.builtin.copy:
     src: files/zshrc
     dest: /etc/skel/.zshrc
     mode: "0644"
+
+- name: Standard packages
+  become: true
+  ansible.builtin.package:
+    state: latest
+    name:
+      - curl
+      - git
+      - vim
+      - wget
+      - zsh
+
+- name: Python binaries
+  become: true
+  ansible.builtin.package:
+    state: latest
+    name:
+      - poetry
+
+- name: Ensure George's group is set
+  become: true
+  ansible.builtin.group:
+    state: present
+    gid: "1000"
+    name: gmc
+
+- name: Ensure George is set
+  become: true
+  ansible.builtin.user:
+    state: present
+    comment: "George Cummings"
+    create_home: true
+    group: gmc
+    name: gmc
+    shell: /bin/zsh
+    uid: "1000"
+
+- name: George gets the zshrc skeleton
+  become: true
+  become_user: gmc
+  ansible.builtin.copy:
+    src: /etc/skel/.zshrc
+    dest: /home/gmc/.zshrc
+    mode: "0644"
+    remote: true
+
+- name: George local python
+  become: true
+  become_user: gmc
+  ansible.builtin.pip:
+    state: latest
+    name: invoke
