--- a/services/04_lb/local_nginx_values.yaml
+++ b/services/04_lb/local_nginx_values.yaml
@@ -5,4 +5,4 @@ controller:
   service:
     loadBalancerIP: 192.168.68.21
 udp:
-  53: cummings-online-local/bind9-service
+  53: cummings-online-local/bind9-service:5353
