--- a/playbooks/roles/common/tasks/main.yml
+++ b/playbooks/roles/common/tasks/main.yml
@@ -42,7 +42,7 @@
     src: /etc/skel/.zshrc
     dest: /home/gmc/.zshrc
     mode: "0644"
-    remote: true
+    remote_src: true
 
 - name: George local python
   become: true
