--- a/playbooks/roles/common/tasks/main.yml
+++ b/playbooks/roles/common/tasks/main.yml
@@ -14,17 +14,10 @@
     name:
       - curl
       - git
+      - pipx
       - vim
       - wget
       - zsh
-
-- name: System-wide python tools
-  become: true
-  ansible.builtin.package:
-    state: latest
-    name:
-      - invoke
-      - poetry
 
 # === Master User ===========================================================
 
@@ -63,3 +56,18 @@
     dest: /home/gmc/.zshrc
     mode: "0644"
     remote_src: true
+
+- name: George's Python tools
+  become: true
+  become_user: gmc
+  ansible.builtin.pip:
+    state: latest
+    name:
+      - invoke
+    extra_args: --user
+
+- name: Install Poetry for George
+  become: true
+  become_user: gmc
+  community.general.pipx:
+    name: poetry
