Debian does not like local invoke

--- a/playbooks/roles/common/tasks/main.yml
+++ b/playbooks/roles/common/tasks/main.yml
@@ -24,7 +24,7 @@
   ansible.builtin.package:
     state: latest
     name:
-      - invoke
+      - python3-invoke
 
 # === Master User ===========================================================
 
