--- a/playbooks/roles/common/vars/main.yml
+++ b/playbooks/roles/common/vars/main.yml
@@ -3,3 +3,4 @@ lua_tarball: "lua-{{ lua_version }}_MacOS1011_bin.tar.gz"
 lua_files_url: "https://sourceforge.net/projects/luabinaries/files"
 lua_binary_url : "{{ lua_files_url }}/{{ lua_version }}/Tools%20Executables"
 lua_download: "{{lua_binary_url }}/{{ lua_tarball }}/download"
+home: "{{ lookup('env', 'HOME') }}"
