Changed starship to better template

--- a/playbooks/roles/common/tasks/main.yml
+++ b/playbooks/roles/common/tasks/main.yml
@@ -109,6 +109,7 @@
         name:
           - iterm2
           - font-sauce-code-pro-nerd-font
+          - font-jetbrains-mono-nerd-font
           - vscode
     - name: install and configure nvim plugins
       become_user: gmc
