Hyprland fix on workstation

--- a/nixos/users/gmc/hypr/hyprpaper.conf
+++ b/nixos/users/gmc/hypr/hyprpaper.conf
@@ -1,4 +1,6 @@
 preload = ~/.config/hypr/bg.jpg
 wallpaper = eDP-1,~/.config/hypr/bg.jpg
 wallpaper = DP-1,~/.config/hypr/bg.jpg
+wallpaper = DP-2,~/.config/hypr/bg.jpg
+wallpaper = DP-3,~/.config/hypr/bg.jpg
 
