--- a/nixos/users/gmc/hypr/hyprland.conf
+++ b/nixos/users/gmc/hypr/hyprland.conf
@@ -2,6 +2,8 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor=,preferred,auto,auto
 
+# Logging
+#disable_logs = false
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
@@ -95,11 +97,6 @@ misc {
     key_press_enables_dpms = true
 }
 
-# Example windowrule v1
-# windowrule = float, ^(kitty)$
-# Example windowrule v2
-# windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
-# See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 windowrulev2 = workspace 2,class:^(@joplin/app-desktop)$
 windowrulev2 = workspace 3,class:^(code-url-handler)$
 windowrulev2 = workspace 4,class:^(Cider)$
@@ -119,9 +116,9 @@ bind = $mainMod, RETURN, exec, kitty
 bind = $mainMod, A, exec, anki
 bind = $mainMod, D, exec, wofi --show drun
 bind = $mainMod, I, exec, firefox
-bind = $mainMod, J, exec, qjackctl
+bind = $mainMod SHIFT, J, exec, qjackctl
 bind = $mainMod, K, exec, virt-manager
-bind = $mainMod, M, exec, cider
+bind = $mainMod, M, exec, cider-2
 bind = $mainMod, N, exec, joplin-desktop
 
 bind = $mainMod SHIFT, L, exec, swaylock -f -e -c 1d2021 --inside-color 000000b3 -s fill -i ~/.cache/lockscreen; sleep 1; hyprctl dispatch dpms off
