Hyprland wifo really nice

--- a/nixos/users/gmc/hypr/hyprland.conf
+++ b/nixos/users/gmc/hypr/hyprland.conf
@@ -98,7 +98,7 @@ misc {
 }
 
 windowrulev2 = workspace 2,class:^(@joplin/app-desktop)$
-windowrulev2 = workspace 3,class:^(code-url-handler)$
+windowrulev2 = workspace 2,class:^(code-url-handler)$
 windowrulev2 = workspace 4,class:^(Cider)$
 windowrulev2 = workspace 5,class:^(virt-manager)$
 
@@ -114,7 +114,7 @@ bind = $mainMod SHIFT, Q, killactive,
 
 bind = $mainMod, RETURN, exec, kitty
 bind = $mainMod, A, exec, anki
-bind = $mainMod, D, exec, wofi --show drun
+bind = $mainMod, D, exec, wofi -c ~/.config/wofi/wofi.conf
 bind = $mainMod, I, exec, firefox
 bind = $mainMod SHIFT, J, exec, qjackctl
 bind = $mainMod, K, exec, virt-manager
