Added fullscreen key

--- a/nixos/users/gmc/hypr/hyprland.conf
+++ b/nixos/users/gmc/hypr/hyprland.conf
@@ -110,6 +110,7 @@ $mainMod = SUPER
 # Personal binds
 
 bind = $mainMod SHIFT, E, exit, 
+bind = $mainMod, F, fullscreen,
 bind = $mainMod SHIFT, Q, killactive, 
 
 bind = $mainMod, RETURN, exec, kitty
