--- a/nixos/users/gmc/hypr/hyprland.conf
+++ b/nixos/users/gmc/hypr/hyprland.conf
@@ -111,6 +111,7 @@ $mainMod = SUPER
 
 bind = $mainMod SHIFT, E, exit, 
 bind = $mainMod, F, fullscreen,
+bind = $mainMod SHIFT, P, exec, grim -g "$(slurp)"
 bind = $mainMod SHIFT, Q, killactive, 
 
 bind = $mainMod, RETURN, exec, kitty
