--- a/playbooks/roles/common/tasks/main.yml
+++ b/playbooks/roles/common/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 # Linux ===================================================================
 - name: linux setup
-  when: ansible_distribution == "Ubuntu" or ansible_distribution == "Debian":
+  when: ansible_distribution == "Ubuntu" or ansible_distribution == "Debian"
   become: true
   block:
     - name: system configuration
