--- a/playbooks/roles/timeserver/handlers/main.yml
+++ b/playbooks/roles/timeserver/handlers/main.yml
@@ -7,6 +7,6 @@
 
 - name: restart gpsd
   become: true
-  when: 'gps' in group_names
+  when: "'gps' in group_names"
   ansible.builtin.command:
     cmd: systemctl restart gpsd
