--- a/playbooks/roles/user_gmc/tasks/main.yml
+++ b/playbooks/roles/user_gmc/tasks/main.yml
@@ -28,15 +28,12 @@
         owner: gmc
         group: gmc
         
-    - name: zsh configuration
+    - name: gmc zsh configuration
       become_user: gmc
-      block:
-        - name: George gets the zshrc skeleton
-          ansible.builtin.copy:
-            src: /etc/skel/.zshrc
-            dest: /home/gmc/.zshrc
-            mode: "0644"
-            remote_src: true
+      ansible.builtin.copy:
+        src: files/zshrc
+        dest: /home/gmc/.zshrc
+        mode: "0644"
 
     - name: install and configure nvim plugins
       become_user: gmc
@@ -52,7 +49,37 @@
         - name: install nvim configurations
           ansible.builtin.copy:
             src: nvim
-            dest: "/home/gmc/.config/nvim" 
+            dest: "/home/gmc/.config/"
+    - name: install starship for gmc
+      become_user: gmc
+      block:
+        - name: ensure local bin and src exists
+          ansible.builtin.file:
+            state: directory
+            path: "/home/gmc/.local/{{ item }}"
+            mode: "0700"
+          loop:
+            - bin
+            - src
+        - name: check for starship
+          ansible.builtin.stat:
+            path: "/home/gmc/.local/bin/starship"
+          register: starship
+        - name: download starship
+          ansible.builtin.get_url:
+            url: https://starship.rs/install.sh
+            dest: "/home/gmc/.local/src/starship_install.sh"
+            mode: "0700"
+          when: not starship.stat.exists
+        - name: install starship
+          ansible.builtin.shell:
+            cmd: /home/gmc/.local/src/starship_install.sh -b ~/.local/bin -y
+          when: not starship.stat.exists
+        - name: install starship theme
+          ansible.builtin.copy:
+            src: files/starship.toml
+            dest: "{{ home }}/.config/starship.toml"
+            mode: "0644"
 
 # MacOS =====================================================================
 # All the common, development and user packages for MacOS X are set here
@@ -62,9 +89,9 @@
 - name: macos setup
   when: ansible_distribution == "MacOSX"
   become: true
+  become_user: gmc
   block:
     - name: install brew packages
-      become_user: gmc
       community.general.homebrew:
         name:
           - docker
@@ -83,23 +110,21 @@
           - starship
           - tree
           - wget
-    - name: Install rust and cargo
+    - name: Install rust and cargo on MacOS
       ansible.builtin.command: rustup-init
       changed_when: false
     - name: install brew cask packages as root
       community.general.homebrew:
         name:
           - docker
-    - name: install brew cask packages as user
-      become_user: gmc
+    - name: install brew cask packages as user on MacOS
       community.general.homebrew:
         name:
           - iterm2
           - font-sauce-code-pro-nerd-font
           - font-jetbrains-mono-nerd-font
           - vscode
-    - name: install and configure nvim plugins
-      become_user: gmc
+    - name: install and configure nvim plugins on MacOS
       block:
         - name: install vim-plug
           ansible.builtin.shell:
@@ -113,40 +138,32 @@
           ansible.builtin.copy:
             src: nvim
             dest: "/Users/gmc/.config/nvim" 
-    - name: configure zshrc
-      become_user: gmc
+    - name: configure zshrc on MacOS
       ansible.builtin.copy:
         src: files/zshrc-darwin
         dest: /Users/gmc/.zshrc
         mode: "0644"
-    - name: configure iterm2
-      become_user: gmc
+    - name: configure iterm2 on MacOS
       ansible.builtin.copy:
         src: com.googlecode.iterm2.plist
         dest: ~/Library/Preferences/com.googlecode.iterm2.plist
         mode: "0600"
-    - name: install pipx packages
+    - name: install pipx packages on MacOS
       community.general.pipx:
         name:
           - poetry
-
-# All non-NixOS systems ------------------------------------------------------
-- name: local configurations
-  become: true
-  become_user: gmc
-  when: ansible_distribution != "NixOS"
-  block:
-    - name: install linters and language servers for configurations
-      ansible.builtin.pip:
-        name:
-          - black
-          - jedi-language-server
-          - yq
-          - yamllint
-        extra_args: --user
-
+    - name: local python tools on MacOS
+      block:
+        - name: install linters and language servers for configurations
+          ansible.builtin.pip:
+            name:
+              - black
+              - jedi-language-server
+              - yq
+              - yamllint
+            extra_args: --user
     - name: install starship theme
       ansible.builtin.copy:
         src: files/starship.toml
-        dest: "{{ home }}/.config/starship.toml"
+        dest: "{{ home }}/.config/starship-mac.toml"
         mode: "0644"
