--- a/playbooks/roles/development/handlers/main.yml
+++ b/playbooks/roles/development/handlers/main.yml
@@ -1,9 +1,12 @@
+---
 - name: install golang from tarball
   become: true
   block:
-    ansible.builtin.file:
-      state: absent
-      path: /usr/local/go
-    ansible.builtin.command: >
-      tar -C /usr/local -xzf /usr/localsrc/go{{ golang_version }}.tar.gz
-
+    - name: erase old go
+      ansible.builtin.file:
+        state: absent
+        path: /usr/local/go
+    - name: install new go
+      ansible.builtin.command:
+        cmd: >
+          tar -C /usr/local -xzf /usr/local/src/go{{ golang_version }}.tar.gz
