--- a/playbooks/roles/user_gmc/files/starship.toml
+++ b/playbooks/roles/user_gmc/files/starship.toml
@@ -1,7 +1,8 @@
 format = """
 [░▒▓](#a3aed2)\
-[  ](bg:#a3aed2 fg:#090c0c)\
+[  ](bg:#a3aed2 fg:#090c0c)\
 [](bg:#769ff0 fg:#a3aed2)\
+$hostname\
 $directory\
 [](fg:#769ff0 bg:#394260)\
 $git_branch\
@@ -17,7 +18,7 @@ $time\
 
 [directory]
 style = "fg:#e3e5e5 bg:#769ff0"
-format = "[ $path ]($style)"
+format = "[$path ]($style)"
 truncation_length = 3
 truncation_symbol = "…/"
 
@@ -35,6 +36,11 @@ format = '[[ $symbol $branch ](fg:#769ff0 bg:#394260)]($style)'
 [git_status]
 style = "bg:#394260"
 format = '[[($all_status$ahead_behind )](fg:#769ff0 bg:#394260)]($style)'
+
+[hostname]
+ssh_symbol = '🕳️ '
+format = '[$ssh_symbol$hostname]($style)[:]($style)'
+style = "fg:#e3e5e5 bg:#769ff0"
 
 [nodejs]
 symbol = ""
