--- a/playbooks/roles/user_gmc/tasks/main.yml
+++ b/playbooks/roles/user_gmc/tasks/main.yml
@@ -1,202 +1,34 @@
 ---
-# User gmc ===================================================================
-- name: system setup for user gmc
+- name: linux setup for user gmc
   when: ansible_distribution == "Ubuntu" or ansible_distribution == "Debian"
   become: true
   block:
-    - name: Ensure George's group is set
-      ansible.builtin.group:
-        state: present
-        gid: "1000"
-        name: gmc
-        
-    - name: Ensure George user is set
-      ansible.builtin.user:
-        state: present
-        comment: "George Cummings"
-        create_home: true
-        group: gmc
-        name: gmc
-        shell: /bin/zsh
-        uid: "1000"
-        
-    - name: Ensure George's remote_tmp is set
-      ansible.builtin.file:
-        state: directory
-        path: /home/gmc/.ansible/tmp
-        mode: "0770"
-        owner: gmc
-        group: gmc
-        
-    - name: gmc zsh configuration
-      become_user: gmc
-      ansible.builtin.copy:
-        src: files/zshrc
-        dest: /home/gmc/.zshrc
-        mode: "0644"
-
-    - name: install and configure nvim plugins
+    - import_tasks: gmc_shell.yml
+    - name: user files for gmc
       become_user: gmc
       block:
-        - name: install vim-plug
-          ansible.builtin.shell:
-            executable: /bin/bash
-            cmd: >
-              curl -fLo ${HOME}/.local/share/nvim/site/autoload/plug.vim 
-              --create-dirs
-              https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim
-          changed_when: false
-        - name: install nvim configurations
-          ansible.builtin.copy:
-            src: nvim
-            dest: "/home/gmc/.config/"
-    - name: install starship for gmc
-      become_user: gmc
-      block:
-        - name: ensure local bin and src exists
-          ansible.builtin.file:
-            state: directory
-            path: "/home/gmc/.local/{{ item }}"
-            mode: "0700"
-          loop:
-            - bin
-            - src
-        - name: check for starship
-          ansible.builtin.stat:
-            path: "/home/gmc/.local/bin/starship"
-          register: starship
-        - name: download starship
-          ansible.builtin.get_url:
-            url: https://starship.rs/install.sh
-            dest: "/home/gmc/.local/src/starship_install.sh"
-            mode: "0700"
-          when: not starship.stat.exists
-        - name: install starship
-          ansible.builtin.shell:
-            cmd: /home/gmc/.local/src/starship_install.sh -b ~/.local/bin -y
-          when: not starship.stat.exists
-        - name: install starship theme
-          ansible.builtin.copy:
-            src: files/starship.toml
-            dest: "{{ home }}/.config/starship.toml"
-            mode: "0644"
+      - import_tasks: gmc_neovim.yml
+      - import_tasks: gmc_starship.yml
+      - name: local languages for gmc
+        when: "'development' in group_names"
+        import_tasks: gmc_local_languages.yml
+      - name: cargo env hack for zshrc
+        when: "'development' not in group_names"
+        block:
+          - name: ensure .cargo/ exists
+            ansible.builtin.file:
+              state: directory
+              path: /home/gmc/.cargo
+              mode: "0700"
+          - name: ensure .cargo/env exists
+            ansible.builtin.file:
+              state: touch
+              path: /home/gmc/.cargo/env
+              mode: "0600"
 
-    # Programming ------------------------------------
-    - name: install local programming environment tools
-      when: "'development' in group_names"
-      become_user: gmc
-      block:
-        - name: install pipx packages
-          community.general.pipx:
-            name: "{{ item }}"
-          with_items:
-              - poetry
-              - black
-              - yamllint
-              - yq
-              - jedi-language-server
-
-        - name: install rust
-          block:
-            - name: check if rustc is there
-              ansible.builtin.stat:
-                path: /home/gmc/.cargo/bin/rustc
-              register: rust
-            - name: install rustup, rust and cargo
-              when: not rust.stat.exists
-              ansible.builtin.shell:
-                cmd: >
-                  curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs |
-                  sh
-            - name: add rust-analyzer
-              when: not rust.stat.exists
-              ansible.builtin.shell:
-                cmd: >
-                  rustup component add rust-analyzer
-
-# MacOS =====================================================================
-# All the common, development and user packages for MacOS X are set here
-# as the author's MacOS belongs to his employer and must not be installed as
-# root.
-# ===========================================================================
-- name: macos setup
+- name: macos setup for user gmc
   when: ansible_distribution == "MacOSX"
   become: true
   become_user: gmc
-  block:
-    - name: install brew packages
-      community.general.homebrew:
-        name:
-          - docker
-          - go
-          - jq
-          - lld  # LLVM linker. Apparently better than rust's native linker
-          - lsd  # ls with cool effects. Requires nerd-fonts
-          - markdownlint-cli
-          - marksman
-          - nvim
-          - pipx
-          - "python@3.11"
-          - ruby
-          - rustup
-          - rust-analyzer
-          - starship
-          - tree
-          - wget
-    - name: Install rust and cargo on MacOS
-      ansible.builtin.command: rustup-init
-      changed_when: false
-    - name: install brew cask packages as root
-      community.general.homebrew:
-        name:
-          - docker
-    - name: install brew cask packages as user on MacOS
-      community.general.homebrew:
-        name:
-          - iterm2
-          - font-sauce-code-pro-nerd-font
-          - font-jetbrains-mono-nerd-font
-          - vscode
-    - name: install and configure nvim plugins on MacOS
-      block:
-        - name: install vim-plug
-          ansible.builtin.shell:
-            executable: /bin/bash
-            cmd: >
-              curl -fLo ${HOME}/.local/share/nvim/site/autoload/plug.vim 
-              --create-dirs
-              https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim
-          changed_when: false
-        - name: install nvim configurations
-          ansible.builtin.copy:
-            src: nvim
-            dest: "/Users/gmc/.config/nvim" 
-    - name: configure zshrc on MacOS
-      ansible.builtin.copy:
-        src: files/zshrc-darwin
-        dest: /Users/gmc/.zshrc
-        mode: "0644"
-    - name: configure iterm2 on MacOS
-      ansible.builtin.copy:
-        src: com.googlecode.iterm2.plist
-        dest: ~/Library/Preferences/com.googlecode.iterm2.plist
-        mode: "0600"
-    - name: install pipx packages on MacOS
-      community.general.pipx:
-        name:
-          - poetry
-    - name: local python tools on MacOS
-      block:
-        - name: install linters and language servers for configurations
-          ansible.builtin.pip:
-            name:
-              - black
-              - jedi-language-server
-              - yq
-              - yamllint
-            extra_args: --user
-    - name: install starship theme
-      ansible.builtin.copy:
-        src: files/starship.toml
-        dest: "{{ home }}/.config/starship-mac.toml"
-        mode: "0644"
+  import_tasks: gmc_macos.yml
+
