--- a/services/06_netbox/local_values.yaml
+++ b/services/06_netbox/local_values.yaml
@@ -9,6 +9,11 @@ externalDatabase:
   existingSecretName: netbox-db-credentials
 image:
   tag: v4.1.6
+overrideUnitConfig:
+  proxy_connect_timeout: 600
+  proxy_send_timeout: 600
+  proxy_read_timeout: 600
+  send_timeout: 600
 postgresql:
   enabled: false
 redis:
