--- a/nixos/users/gmc/hypr/hyprland.conf
+++ b/nixos/users/gmc/hypr/hyprland.conf
@@ -60,10 +60,12 @@ decoration {
         passes = 1
     }
 
-    drop_shadow = yes
-    shadow_range = 4
-    shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
+    shadow {
+        color = rgba(1a1a1aee)
+        enabled = true
+        range = 4
+        render_power = 3
+    }
 }
 
 animations {
