--- a/nixos/users/gmc/hypr/hyprland.conf
+++ b/nixos/users/gmc/hypr/hyprland.conf
@@ -113,6 +113,7 @@ $mainMod = SUPER
 
 bind = $mainMod SHIFT, E, exit, 
 bind = $mainMod, F, fullscreen,
+bind = $mainMod, G, exec, appimage-run ~/1_personal/sources/appimages/ES-DE_x64.AppImage
 bind = $mainMod SHIFT, P, exec, grim -g "$(slurp)"
 bind = $mainMod SHIFT, Q, killactive, 
 
