Added hyprlock and hypridle

--- a/nixos/home-manager/gmc/hypr/hyprland.conf
+++ b/nixos/home-manager/gmc/hypr/hyprland.conf
@@ -126,7 +126,8 @@ bind = $mainMod, K, exec, virt-manager
 bind = $mainMod, M, exec, cider-2
 bind = $mainMod, N, exec, joplin-desktop
 
-bind = $mainMod SHIFT, L, exec, swaylock -f -e -c 1d2021 --inside-color 000000b3 -s fill -i ~/.cache/lockscreen; sleep 1; hyprctl dispatch dpms off
+#bind = $mainMod SHIFT, L, exec, swaylock -f -e -c 1d2021 --inside-color 000000b3 -s fill -i ~/.cache/lockscreen; sleep 1; hyprctl dispatch dpms off
+bind = $mainMod, L, exec, hyprlock
 
 # Backscreen light binding
 bind = , XF86MonBrightnessUp, exec, brightnessctl set +10%
