--- a/nixos/home-manager/gmc/hypr/hyprland.conf
+++ b/nixos/home-manager/gmc/hypr/hyprland.conf
@@ -8,7 +8,7 @@ monitor=,preferred,auto,auto
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
-exec-once = waybar & hyprpaper 
+exec-once = waybar & hyprpaper & hypridle
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
